# kong-fu-chess

./: .clangd  .gitignore  CMakeLists.txt  README.md  kong_fu_chess.db
src/: board.cpp  board.h  board_serializer.cpp  board_serializer.h  command_processor.cpp  command_processor.h  constants.h  game_state.cpp  game_state.h  main.cpp  piece.h  tests.cpp
src/app/: application.cpp  application.h  game_loop.cpp  game_loop.h  host_election.cpp  host_election.h  net_system_guard.h
src/config/: game_config.h  network_config.h  paths.h  ui_config.h
src/db/: user_store.cpp  user_store.h
src/elo/: elo_rating.cpp  elo_rating.h
src/engine/: game_engine.cpp  game_engine.h  move_log.cpp  move_log.h
src/events/: event_bus.cpp  event_bus.h  game_event.h
src/input/: board_mapper.cpp  board_mapper.h  controller.cpp  controller.h
src/io/: algebraic.cpp  algebraic.h  board_parser.cpp  board_parser.h  board_printer.cpp  board_printer.h  board_setup.cpp  board_setup.h
src/matchmaking/: matchmaking_queue.cpp  matchmaking_queue.h
src/model/: board.cpp  board.h  piece.h  position.h
src/network/: client_game_sync.cpp  client_game_sync.h  client_message_queue.cpp  client_message_queue.h  command_queue.cpp  command_queue.h  local_ws_client.cpp  local_ws_client.h  network_input.cpp  network_input.h  ws_protocol.cpp  ws_protocol.h  ws_server.cpp  ws_server.h
src/network/protocol/: client_commands.cpp  color_codec.cpp  json_util.cpp  json_util.h  piece_codec.cpp  piece_codec.h  server_game_messages.cpp  server_lobby_messages.cpp
src/network/server/: client_registry.cpp  client_registry.h  disconnect_handler.cpp  disconnect_handler.h  login_handler.cpp  login_handler.h  message_router.cpp  message_router.h  queue_handler.cpp  queue_handler.h
src/online/: disconnect_manager.cpp  disconnect_manager.h  session_manager.h
src/online/matchmaking/: matchmaking_queue.cpp
src/realtime/: motion.h  move_resolution.h  real_time_arbiter.cpp  real_time_arbiter.h
src/rules/: piece_rules.cpp  piece_rules.h  rule_engine.cpp  rule_engine.h
src/rules/movement/: movement_helpers.cpp  movement_helpers.h  piece_movement.h  piece_movements.cpp
src/session/: match_info.h  session_manager.cpp  session_manager.h  shell_lobby.cpp  shell_lobby.h  shell_login.cpp  shell_login.h
src/texttests/: script_parser.cpp  script_parser.h  script_runner.cpp  script_runner.h
src/ui/lobby/: match_info.h  shell_lobby.cpp  shell_login.cpp  shell_login.h
src/view/: disconnect_overlay.cpp  disconnect_overlay.h  piece_sprite.cpp  piece_sprite.h  render_helpers.cpp  render_helpers.h  renderer.cpp  renderer.h
